--- a/templates/employees_list.html
+++ b/templates/employees_list.html
@@ -4,7 +4,7 @@
 <div class="container">
     <a href="/" class='btn btn-default'>&leftarrow; Back Home</a>
     <div class="row justify-content-center mt-1">
-        <div class="col-md-10">
+        <div class="col-md-12">
             <div class="card">
                 <div class="card-body">
                     <table class="table table-bordered">
@@ -34,7 +34,7 @@
                                     <a href="/detail/{{ object.id }}" style="text-decoration: none;">
                                         <span class='fas fa-eye'></span>
                                     </a>
-                                    <a href="#" style="text-decoration: none;">
+                                    <a href="/update/{{ object.id }}" style="text-decoration: none;">
                                         <span class="fas fa-edit text-secondary ms-2"></span>
                                     </a>
                                     <a href="/delete/{{ object.id }}">
