--- a/templates/update.html
+++ b/templates/update.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="container">
     <div class="row justify-content-center mt-1">
         <div class="col-md-8">
@@ -23,6 +21,18 @@
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input class="form-control" type="text" name="email" placeholder='Your e-mail' value="{{ emp.email}}">
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Subject</label>
+                            <input class="form-control" type="text" name="subject" placeholder='Your Subject' value="{{ emp.subject}}">
+                        </div>
+                        <div class="form-group">
+                            <label for="bio">Biography</label>
+                            <textarea name="bio" cols="30" rows="5" placeholder="Your biography" class="form-control" value="{{ emp.bio }}"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="interview">Interview</label>
+                            <input type="checkbox">
                         </div>
                         <div class="form-group mt-2 d-grid ">
                             <button class="btn btn-primary btn-block text-uppercase" type="submit">Update
